# taiga

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml
.travis/: install-mongoc.sh  install-mongocxx.sh
apps/: CMakeLists.txt  taiga.cpp  taigabot.cpp
cmake/: FindAegis.cmake  Findfifo_map.cmake
include/taiga/: Bot.hpp  Client.hpp  Command.hpp  Commands.hpp  Config.hpp  Version.hpp  Version.hpp.in
include/taiga/categories/: Conversion.hpp  General.hpp  Miscellaneous.hpp  Prefix.hpp  Reddit.hpp  Since.hpp  Timezone.hpp  Weather.hpp
include/taiga/command/: Command.hpp  Commands.hpp
include/taiga/command/categories/: Category.hpp  Conversion.hpp  General.hpp  Miscellaneous.hpp  Reddit.hpp  Timezone.hpp  Weather.hpp
include/taiga/util/: Command.hpp  CommandUtil.hpp  Date.hpp  Math.hpp  MathUtil.hpp  String.hpp  StringUtil.hpp  Util.hpp  Various.hpp
include/taigabot/: Client.hpp  Command.hpp  Commands.hpp  Config.hpp  Events.hpp  Util.hpp
include/taigabot/util/: MathUtil.hpp  StringUtil.hpp  Util.hpp
src/: Bot.cpp  CMakeLists.txt  Client.cpp  Command.cpp  Commands.cpp  Config.cpp  Events.cpp  Util.cpp
src/categories/: Conversion.cpp  General.cpp  Miscellaneous.cpp  Prefix.cpp  Reddit.cpp  Since.cpp  Timezone.cpp  Weather.cpp
src/command/: Command.cpp  Commands.cpp
src/command/categories/: Category.cpp  Conversion.cpp  General.cpp  Miscellaneous.cpp  Reddit.cpp  Timezone.cpp  Weather.cpp
src/util/: Command.cpp  CommandUtil.cpp  Date.cpp  MathUtil.cpp  String.cpp  StringUtil.cpp  Util.cpp  Various.cpp
